--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -9,6 +9,11 @@
     {
       "src": "./app-icon512x512.png",
       "sizes": "512x512"
+    },
+    {
+      "src": "./maskable_icon",
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
