--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -11,7 +11,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "./maskable_icon",
+      "src": "./maskable_icon.png",
       "sizes": "512x512",
       "purpose": "any maskable"
     }
