--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -17,6 +17,7 @@
     }
   ],
   "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#000000"
